@@ -235,8 +235,6 @@ tasks.withType(Test).configureEach {
     forkEvery = 2000
     maxParallelForks = 8
     
-    systemProperty("spring.main.banner-mode", "off")
-    
     failFast = true
 
     def list = []
@@ -267,6 +265,10 @@ tasks.withType(Test).configureEach {
     list.add("--add-opens")
     list.add("java.base/java.time=ALL-UNNAMED")
     list.add("--add-opens")
+    list.add("java.base/java.util.concurrent=ALL-UNNAMED")
+    list.add("--add-opens")
+    list.add("java.base/java.util.concurrent.locks=ALL-UNNAMED")
+    list.add("--add-opens")
     list.add("java.base/java.net=ALL-UNNAMED")
     list.add("--add-opens")
     list.add("java.base/java.nio=ALL-UNNAMED")
@@ -278,7 +280,7 @@ tasks.withType(Test).configureEach {
     list.add("jdk.management/com.sun.management.internal=ALL-UNNAMED")
     list.add("--add-opens")
     list.add("java.base/sun.security.action=jdk.crypto.ec")
-
+    
     list.add("-Xms512m")
     list.add("-Xmx6g")
 
