@@ -138,6 +138,8 @@ graalvmNative {
             buildArgs.add('-J-Xmx14G')
             buildArgs.add('-J-Xms4G')
             buildArgs.add('--native-image-info')
+            buildArgs.add('--enable-sbom')
+            buildArgs.add('--gc=G1')
             buildArgs.add('--strict-image-heap')
 
             buildArgs.add('-march=native')
@@ -151,13 +153,12 @@ graalvmNative {
 
             buildArgs.add('--initialize-at-build-time=java.beans')
             buildArgs.add('--initialize-at-build-time=com.sun.beans')
-            buildArgs.add('--initialize-at-build-time=com.sun.xml.stream.buffer.sax')
             buildArgs.add('--initialize-at-build-time=groovyjarjarantlr4.v4.runtime')
             buildArgs.add('--initialize-at-build-time=org.codehaus.groovy')
             buildArgs.add('--initialize-at-build-time=org.apache.groovy')
             buildArgs.add('--initialize-at-build-time=groovy.lang')
-            buildArgs.add('--initialize-at-build-time=groovyjarjarasm.asm.Type')
-            buildArgs.add('--initialize-at-build-time=groovyjarjarasm.asm.Handle')
+            buildArgs.add('--initialize-at-build-time=groovyjarjarasm.asm')
+            buildArgs.add('--initialize-at-build-time=com.sun.xml.stream.buffer.sax.DefaultWithLexicalHandler')
             buildArgs.add('--initialize-at-build-time=org.apache.xerces.jaxp.datatype')
 
             buildArgs.add('--initialize-at-run-time=com.sun.xml.ws')
@@ -201,6 +202,10 @@ processAot {
     list.add("java.base/java.lang=ALL-UNNAMED")
     list.add("--add-opens")
     list.add("java.base/java.util=ALL-UNNAMED")
+    list.add("--add-opens")
+    list.add("java.base/java.util.concurrent=ALL-UNNAMED")
+    list.add("--add-opens")
+    list.add("java.base/java.util.concurrent.locks=ALL-UNNAMED")
     list.add("--add-opens")
     list.add("java.base/java.time=ALL-UNNAMED")
     list.add("--add-opens")
